- Implimented classic client code